IDE-266 Added support for memory args and user timezone settings in portal server config editor.  Defaults for server memory settings on launch are now -Xmx768m  instead of -Xmx1024m
git-svn-id: svn://svn.liferay.com/repos/public/tools/trunk/ide@68606 05bdf26c-840f-0410-9ced-eb539d925f36